deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-iaj
  labels:
    app: python-app-iaj
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app-iaj
  template:
    metadata:
      labels:
        app: python-app-iaj
    spec:
      containers:
      - image: ilyasjaelani/python-app-iaj:v1
        name: python-app-iaj
        ports:
        - containerPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-iaj-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Nonaktifkan redirect HTTPS (opsional)
spec:
  rules:
  - host: python.lakewoodvilla.my.id # Ganti dengan domain/subdomain Anda
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-iaj
            port:
              number: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-iaj
  labels:
    app: python-app-iaj
spec:
  type: LoadBalancer
  selector:
    app: python-app-iaj
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
